<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/wall_rap1_resized"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_below="@id/quiz_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginRight="28dp"
        android:layout_marginLeft="28dp"
        android:background="@android:color/black"
        android:alpha="0.8" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                style="@style/question_block">

                <TextView
                    android:text="@string/question1"
                    style="@style/question_header"/>

                <EditText
                    style="@style/edittext"
                    android:id="@+id/edittext_1"
                    android:hint="@string/edittext_hint" />

                <TextView
                    style="@style/answer"
                    android:id="@+id/res_q1" />

            </LinearLayout>

            <LinearLayout
                style="@style/question_block">

                <TextView
                    android:text="@string/question2"
                    style="@style/question_header"/>

                <RadioGroup
                    android:id="@+id/radiogroup2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/radio_2_true"
                        style="@style/radio_and_checkbox"
                        android:text="@string/true_"
                        />

                    <RadioButton
                        style="@style/radio_and_checkbox"
                        android:text="@string/false_" />

                </RadioGroup>

                <TextView
                    style="@style/answer"
                    android:id="@+id/res_q2" />

            </LinearLayout>

            <LinearLayout
                style="@style/question_block">

                <TextView
                    android:text="@string/question3"
                    style="@style/question_header"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="12dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            style="@style/radio_and_checkbox"
                            android:id="@+id/checkbox_3-1"
                            android:text="Mos Def" />

                        <CheckBox
                            style="@style/radio_and_checkbox"
                            android:id="@+id/checkbox_3-2"
                            android:text="Ludacris" />

                        <CheckBox
                            style="@style/radio_and_checkbox"
                            android:id="@+id/checkbox_3-3"
                            android:text="Snoop Dogg" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="12dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            style="@style/radio_and_checkbox"
                            android:id="@+id/checkbox_3-4"
                            android:text="Talib Kweli" />

                        <CheckBox
                            style="@style/radio_and_checkbox"
                            android:id="@+id/checkbox_3-5"
                            android:text="Rick Ross" />

                        <CheckBox
                            style="@style/radio_and_checkbox"
                            android:id="@+id/checkbox_3-6"
                            android:text="Lil' Jon" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    style="@style/answer"
                    android:id="@+id/res_q3" />

            </LinearLayout>

            <LinearLayout
                style="@style/question_block">

                <TextView
                    android:text="@string/question4"
                    style="@style/question_header"/>

                <RadioGroup
                    android:id="@+id/radiogroup4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/radio_4_true"
                        style="@style/radio_and_checkbox"
                        android:text="@string/true_" />

                    <RadioButton
                        style="@style/radio_and_checkbox"
                        android:text="@string/false_" />

                </RadioGroup>

                <TextView
                    style="@style/answer"
                    android:id="@+id/res_q4" />

            </LinearLayout>

            <LinearLayout
                style="@style/question_block">

                <TextView
                    android:text="@string/question5"
                    style="@style/question_header"/>

                <EditText
                    style="@style/edittext"
                    android:id="@+id/edittext_5"
                    android:inputType="number"
                    android:hint="@string/edittext_hint" />

                <TextView
                    style="@style/answer"
                    android:id="@+id/res_q5" />

            </LinearLayout>

            <LinearLayout
                style="@style/question_block">

                <TextView
                    android:text="@string/question6"
                    style="@style/question_header"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <RadioGroup
                        android:id="@+id/radiogroup6_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="12dp"
                        android:gravity="left"
                        android:layout_weight="1" >

                        <RadioButton
                            android:id="@+id/radiobutton6_1_1"
                            style="@style/radio_and_checkbox"
                            android:text="Easy E"
                            android:onClick="radioGroup6_2dropper" />

                        <RadioButton
                            android:id="@+id/radiobutton6_1_2"
                            style="@style/radio_and_checkbox"
                            android:text="Ice Cube"
                            android:onClick="radioGroup6_2dropper" />

                        <RadioButton
                            android:id="@+id/radiobutton6_1_3"
                            style="@style/radio_and_checkbox"
                            android:text="Dr. Dre"
                            android:onClick="radioGroup6_2dropper" />

                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/radiogroup6_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="12dp"
                        android:gravity="left"
                        android:layout_weight="1" >

                        <RadioButton
                            android:id="@+id/radiobutton6_2_1"
                            style="@style/radio_and_checkbox"
                            android:text="Yella"
                            android:onClick="radioGroup6_1dropper" />

                        <RadioButton
                            android:id="@+id/radiobutton6_2_2"
                            style="@style/radio_and_checkbox"
                            android:text="Ice T"
                            android:onClick="radioGroup6_1dropper" />

                        <RadioButton
                            android:id="@+id/radiobutton6_2_3"
                            style="@style/radio_and_checkbox"
                            android:text="Mc Ren"
                            android:onClick="radioGroup6_1dropper" />

                    </RadioGroup>

                </LinearLayout>

                <TextView
                    style="@style/answer"
                    android:id="@+id/res_q6" />

            </LinearLayout>

            <LinearLayout
                style="@style/question_block">

                <TextView
                    android:text="@string/question7"
                    style="@style/question_header"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radiogroup7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_weight="1">

                        <RadioButton
                            style="@style/radio_and_checkbox"
                            android:text="50+" />

                        <RadioButton
                            style="@style/radio_and_checkbox"
                            android:text="100+" />

                        <RadioButton
                            android:id="@+id/radio_7"
                            style="@style/radio_and_checkbox"
                            android:text="150+" />

                    </RadioGroup>

                </LinearLayout>

                <TextView
                    style="@style/answer"
                    android:id="@+id/res_q7" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="6dp"
                android:background="@drawable/rounded_corners_questions">

                <TextView
                    android:text="@string/question8"
                    style="@style/question_header"/>

                <EditText
                    style="@style/edittext"
                    android:id="@+id/edittext_8"
                    android:hint="@string/edittext_hint" />

                <TextView
                    style="@style/answer"
                    android:id="@+id/res_q8" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="@style/buttons"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_border"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:onClick="reset"/>

                <Button
                    style="@style/buttons"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/button_border"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/check_button"
                    android:onClick="checkAnswers"/>

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/quiz_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" >

        <ImageView
            style="@style/mics"
            android:layout_weight="1"
            android:src="@drawable/mic2"/>

        <ImageView
            style="@style/stars"
            android:layout_weight="1"
            android:src="@drawable/star2_resize"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/old_english_text"/>

        <ImageView
            style="@style/stars"
            android:layout_weight="1"
            android:src="@drawable/star2_resize"/>

        <ImageView
            style="@style/mics"
            android:layout_weight="1"
            android:src="@drawable/micro" />

    </LinearLayout>

</RelativeLayout>